--- a/style.css
+++ b/style.css
@@ -192,13 +192,14 @@ header img:hover {
 }
 
 .nav-items li a {
-  color: white;
+  color: black;
   text-decoration: none;
   font-weight: bold;
 }
 
 .nav-items li a:hover {
-  color: black;
+  color: white;
+  border-bottom: 3px solid black;
 }
 
 .active {
@@ -284,7 +285,6 @@ header img:hover {
   .navbar {
     padding: 5px 0;
     margin: 0px 0;
-    background-image: linear-gradient(to top, darkblue, aqua, aquamarine);
   }
 
   .nav-login {
@@ -294,7 +294,7 @@ header img:hover {
   }
 
   .menu {
-    display: block;
+    display: none;
   }
 }
 
@@ -323,6 +323,10 @@ header img:hover {
 
   .menu {
     display: block;
+  }
+
+  .project-text h1 {
+    font-size: 30px;
   }
 }
 
@@ -370,6 +374,10 @@ header img:hover {
   .menu {
     display: block;
   }
+
+  .project-text h1 {
+    font-size: 20px;
+  }
 }
 
 .cards {
@@ -405,9 +413,15 @@ header img:hover {
 }
 
 .card,
-h1,
-h2 {
+h1 {
   margin-top: 1rem;
+  font-size: 25px;
+}
+
+.card,
+h2 {
+  margin: 1rem 0 0 0;
+  font-size: 20px;
 }
 
 .my-resume {
@@ -451,7 +465,7 @@ h2 {
 }
 
 .resume-btn {
-  margin: 2rem 0 0 2rem;
+  margin: 2rem 0 0 3rem;
   padding: 1.3rem 1.3rem 1.3rem 1.3rem;
   background-image: linear-gradient(140deg, aquamarine, aqua, white);
   border: 1px solid black;
@@ -517,39 +531,20 @@ h2 {
   font-size: 2rem;
 }
 
-.project-aside-1 {
+.project-text {
   text-align: center;
   font-size: 40px;
 }
 
-.project-aside-1 img {
+.project-text img {
   width: 80%;
   height: auto;
   box-shadow: 5px 5px 10px 1px;
 }
 
-.project-aside-2 {
-  text-align: center;
-  font-size: 40px;
+.project-text h1 {
+  font-size: larger;
 }
-
-.project-aside-2 img {
-  width: 80%;
-  height: auto;
-  box-shadow: 5px 5px 10px 1px;
-}
-
-.project-aside-3 {
-  text-align: center;
-  font-size: 40px;
-}
-
-.project-aside-3 img {
-  width: 80%;
-  height: auto;
-  box-shadow: 5px 5px 10px 1px;
-}
-
 .project-btn {
   margin: 1rem 0 2rem 0;
   width: 8rem;
